--- a/Application/Pages/Manager/TourDetails.cshtml
+++ b/Application/Pages/Manager/TourDetails.cshtml
@@ -21,18 +21,20 @@
         }
     </style>
 
-<!-- Trip Table -->
+<!-- Trips Table -->
 <div class="col col-md-6">
+    <h4>Trips: </h4>
     <!-- Table -->
     <div class="row mt-4">
         <div class="col-md-12">
-            <table class="table table-bordered">
+            <table class="table table-bordered" style="white-space: nowrap;">
                 <thead>
                 <tr>
                     <th>Id</th>
                     <th>Code</th>
                     <th>StartTime</th>
                     <th>EndTime</th>
+                    <th></th>
                 </tr>
                 </thead>
                 <tbody>
@@ -45,6 +47,11 @@
                         <td>@trip.Code</td>
                         <td>@DateOnly.FromDateTime(trip.StartTime)</td>
                         <td>@DateOnly.FromDateTime(trip.EndTime)</td>
+                        <td>
+                            <a href="/manager/trips/@trip.Id" style="text-decoration:none">
+                                <i class="bi bi-eye-fill"> Details</i>
+                            </a>
+                        </td>
                     </tr>
                 }
 
@@ -76,6 +83,8 @@
         </div>
     </div>
 </div>
+
+<hr/>
 
 <div class="container mt-5">
     <div class="row">
@@ -143,7 +152,6 @@
                 }
             </div>
         </div>
-
 
     </div>
 
