--- a/Application/Pages/Manager/TourDetails.cshtml
+++ b/Application/Pages/Manager/TourDetails.cshtml
@@ -21,6 +21,15 @@
         }
     </style>
 
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="/manager/home" style="text-decoration: none">Tours</a></li>
+    <li class="breadcrumb-item active" aria-current="page">@Model.Tour.Id</li>
+  </ol>
+</nav>
+
+<hr/>
+
 <!-- Trips Table -->
 <div class="col col-md-6">
     <h4>Trips: </h4>
