--- a/Application/Pages/Manager/Tours.cshtml
+++ b/Application/Pages/Manager/Tours.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/manager/tours"
+﻿@page "/manager/home"
 @model Application.Pages.Manager.ToursModel
 @{
     ViewData["Title"] = "Tours";
@@ -9,6 +9,15 @@
             color: #74c69d;
         }
 </style>
+
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item active" aria-current="page">Tours</li>
+    </ol>
+</nav>
+
+<hr/>
+
 <div class="container mt-5">
     <!-- Search Bar and File Upload Box -->
     <div class="flex-column justify-content-start">
