--- a/Application/Pages/Manager/TripDetails.cshtml
+++ b/Application/Pages/Manager/TripDetails.cshtml
@@ -1,10 +1,18 @@
 ﻿@page "/manager/trips/{id}"
+@using Data.Enums
 @model Application.Pages.Manager.TripDetails
 
+@* <style> *@
+@*     thead th { width: 100px; border-bottom: solid 1px #ddd; font-weight: bold; } *@
+@*     tbody:nth-child(odd) { background: #f5f5f5;  border: solid 1px #ddd; } *@
+@*     tbody:nth-child(even) { background: #e5e5e5;  border: solid 1px #ddd; } *@
+@* </style> *@
 
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/manager/home" style="text-decoration: none">Tours</a></li>
+        <li class="breadcrumb-item">
+            <a href="/manager/home" style="text-decoration: none">Tours</a>
+        </li>
         <li class="breadcrumb-item active" aria-current="page">
             <a href="/manager/tours/@Model.Tour.Id" style="text-decoration: none">@Model.Tour.Id</a>
         </li>
@@ -23,11 +31,17 @@
             <div class="card" style="background-color: #f8f9fa; padding: 20px">
                 <img src="@Model.Tour.ThumbnailUrl" alt="Tour Thumbnail" style="max-height: 200px; object-fit: contain; margin-bottom: 12px">
                 <div>
-                    <p><strong>ID: <span style="color: #40916c">@Model.Tour.Id.ToString().ToUpper()</span></strong></p>
-                    <p><strong>Title: <span class="card-title" style="color: #3f37c9">@Model.Tour.Title</span></strong></p>
+                    <p>
+                        <strong>ID: <span style="color: #40916c">@Model.Tour.Id.ToString().ToUpper()</span></strong>
+                    </p>
+                    <p>
+                        <strong>Title: <span class="card-title" style="color: #3f37c9">@Model.Tour.Title</span></strong>
+                    </p>
                     <p><strong>Type & Duration:</strong> @Model.Tour.Type (@Model.Tour.Duration)</p>
                     <p><strong>Departure & Destination:</strong> @Model.Tour.Departure / @Model.Tour.Destination</p>
-                    <p><strong>Created At:</strong> @Model.Tour.CreatedAt</p>
+                    <p>
+                        <strong>Created At:</strong> @Model.Tour.CreatedAt
+                    </p>
                 </div>
             </div>
         </div>
@@ -37,11 +51,19 @@
             <div class="card" style="background-color: #f8f9fa; padding: 20px">
                 <div>
                     <h4 class="mb-4">Trip Info: </h4>
-                    <p><strong>ID: <span style="color: #40916c">@Model.Trip.Id.ToString().ToUpper()</span></strong></p>
-                    <p><strong>Code:<span class="card-title" style="color: #3f37c9"> @Model.Trip.Code</span></strong></p>
-                    <p><strong>Start Time: </strong> @DateOnly.FromDateTime(Model.Trip.StartTime)</p>
-                    <p><strong>End Time: </strong> @DateOnly.FromDateTime(Model.Trip.EndTime)</p>
-                    
+                    <p>
+                        <strong>ID: <span style="color: #40916c">@Model.Trip.Id.ToString().ToUpper()</span></strong>
+                    </p>
+                    <p>
+                        <strong>Code:<span class="card-title" style="color: #3f37c9"> @Model.Trip.Code</span></strong>
+                    </p>
+                    <p>
+                        <strong>Start Time: </strong> @DateOnly.FromDateTime(Model.Trip.StartTime)
+                    </p>
+                    <p>
+                        <strong>End Time: </strong> @DateOnly.FromDateTime(Model.Trip.EndTime)
+                    </p>
+
                 </div>
             </div>
         </div>
@@ -53,44 +75,57 @@
 
 <!-- Groups and Travelers Table -->
 <div class="col col-md-6">
-    <h4>Travelers: </h4>
+    <h4>Members: </h4>
     <!-- Table -->
     <div class="row mt-4">
         <div class="col-md-12">
             <table class="table table-bordered">
-                
+
                 <thead>
                 <tr>
-                    <th>Group</th>
                     <th>Email</th>
                     <th>Phone</th>
                     <th>First Name</th>
                     <th>Last Name</th>
                     <th>Gender</th>
+                    <th>Role</th>
                 </tr>
                 </thead>
 
                 <!-- Table Data -->
-                <tbody>
-                @foreach (var group in Model.Trip.TourGroups)
+
+                @foreach (var group in Model.Trip.TourGroups.OrderBy(g => g.GroupNo))
                 {
-                    @foreach (var traveler in group.Travelers)
+                    <tbody>
+                    <tr>
+                        <th colspan="7" scope="col" style="color: #9e2a2b">Group @group.GroupNo</th>
+                    </tr>
+                    @foreach (var user in Model.GetUsersInGroup(group))
                     {
                         <!-- Each Traveler -->
                         <tr>
-                            <td>@group.GroupName</td>
-                            <td>@traveler.Email</td>
-                            <td>@traveler.Phone</td>
-                            <td>@traveler.FirstName</td>
-                            <td>@traveler.LastName</td>
-                            <td>@traveler.Gender</td>
+                            <td class="text-primary">
+                                <span>@user.Email</span>
+                            </td>
+                            <td>@user.Phone</td>
+                            <td>@user.FirstName</td>
+                            <td>@user.LastName</td>
+                            <td>@user.Gender</td>
+                            <td>
+                                @{
+                                    var roleColor = user.Role is UserRole.TourGuide
+                                        ? "text-primary" : "text-success";
+                                }
+                                <b class="@roleColor">@user.Role</b>
+                            </td>
                         </tr>
                     }
+                    </tbody>
                 }
-                </tbody>
-                
+
+
             </table>
         </div>
     </div>
-    
+
 </div>
