--- a/Application/Pages/Manager/TourDetails.cshtml
+++ b/Application/Pages/Manager/TourDetails.cshtml
@@ -22,13 +22,28 @@
     </style>
 
 <nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="/manager/home" style="text-decoration: none">Tours</a></li>
-    <li class="breadcrumb-item active" aria-current="page">@Model.Tour.Id</li>
-  </ol>
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+            <a href="/manager/home" style="text-decoration: none">Tours</a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">@Model.Tour.Id</li>
+    </ol>
 </nav>
 
 <hr/>
+
+<div style="width: 30%; padding: 24px; margin-bottom: 20px; background-color: #b6d4fe; border-radius: 8px">
+    <label class="form-label" for="tourImport">
+        <h5>Import Trip:</h5>
+    </label>
+
+    <!-- File Import Form -->
+    <form method="post" enctype="multipart/form-data" class="input-group flex-row justify-content-start">
+        <input type="file" accept=".zip" asp-for="ImportFile"
+               class="form-control" id="tourImport" style="margin-right: 8px"/>
+        <button class="btn btn-success" type="submit">Import</button>
+    </form>
+</div>
 
 <!-- Trips Table -->
 <div class="col col-md-6">
@@ -70,27 +85,27 @@
     </div>
 
     <!-- Pagination -->
-    <div class="row">
-        <div class="col-md-12">
-            <ul class="pagination justify-content-center">
-                <li class="page-item disabled">
-                    <a class="page-link" href="#" tabindex="-1">Previous</a>
-                </li>
-                <li class="page-item active">
-                    <a class="page-link" href="#">1</a>
-                </li>
-                <li class="page-item">
-                    <a class="page-link" href="#">2</a>
-                </li>
-                <li class="page-item">
-                    <a class="page-link" href="#">3</a>
-                </li>
-                <li class="page-item">
-                    <a class="page-link" href="#">Next</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+    @* <div class="row"> *@
+    @*     <div class="col-md-12"> *@
+    @*         <ul class="pagination justify-content-center"> *@
+    @*             <li class="page-item disabled"> *@
+    @*                 <a class="page-link" href="#" tabindex="-1">Previous</a> *@
+    @*             </li> *@
+    @*             <li class="page-item active"> *@
+    @*                 <a class="page-link" href="#">1</a> *@
+    @*             </li> *@
+    @*             <li class="page-item"> *@
+    @*                 <a class="page-link" href="#">2</a> *@
+    @*             </li> *@
+    @*             <li class="page-item"> *@
+    @*                 <a class="page-link" href="#">3</a> *@
+    @*             </li> *@
+    @*             <li class="page-item"> *@
+    @*                 <a class="page-link" href="#">Next</a> *@
+    @*             </li> *@
+    @*         </ul> *@
+    @*     </div> *@
+    @* </div> *@
 </div>
 
 <hr/>
