--- a/Application/Pages/Manager/Tours.cshtml
+++ b/Application/Pages/Manager/Tours.cshtml
@@ -48,12 +48,15 @@
         <div class="w-50" style="margin: 20px 0 20px 0">
 
             <!-- Search Tour Form -->
-            <div class="input-group">
-                <input type="text" class="form-control" style="margin-right: 8px" placeholder="Search">
-                <div class="input-group-append">
-                    <button class="btn btn-primary" type="button">Search</button>
+            <form method="GET">
+                <div class="input-group">
+                    <input type="text" class="form-control" style="margin-right: 8px" name="searchValue" placeholder="Search">
+                    <div class="input-group-append">
+                        <button class="btn btn-primary" type="submit">Search</button>
+                    </div>
                 </div>
-            </div>
+            </form>
+
         </div>
     </div>
 
@@ -104,26 +107,26 @@
     </div>
 
     <!-- Pagination -->
-    <div class="row">
-        <div class="col-md-12">
-            <ul class="pagination justify-content-center">
-                <li class="page-item disabled">
-                    <a class="page-link" href="#" tabindex="-1">Previous</a>
-                </li>
-                <li class="page-item active">
-                    <a class="page-link" href="#">1</a>
-                </li>
-                <li class="page-item">
-                    <a class="page-link" href="#">2</a>
-                </li>
-                <li class="page-item">
-                    <a class="page-link" href="#">3</a>
-                </li>
-                <li class="page-item">
-                    <a class="page-link" href="#">Next</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+    @* <div class="row"> *@
+    @*     <div class="col-md-12"> *@
+    @*         <ul class="pagination justify-content-center"> *@
+    @*             <li class="page-item disabled"> *@
+    @*                 <a class="page-link" href="#" tabindex="-1">Previous</a> *@
+    @*             </li> *@
+    @*             <li class="page-item active"> *@
+    @*                 <a class="page-link" href="#">1</a> *@
+    @*             </li> *@
+    @*             <li class="page-item"> *@
+    @*                 <a class="page-link" href="#">2</a> *@
+    @*             </li> *@
+    @*             <li class="page-item"> *@
+    @*                 <a class="page-link" href="#">3</a> *@
+    @*             </li> *@
+    @*             <li class="page-item"> *@
+    @*                 <a class="page-link" href="#">Next</a> *@
+    @*             </li> *@
+    @*         </ul> *@
+    @*     </div> *@
+    @* </div> *@
 
 </div>
