add download sample

--- a/Application/Pages/Manager/Tours.cshtml
+++ b/Application/Pages/Manager/Tours.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Tours";
 }
 
-<style>
+<style xmlns="http://www.w3.org/1999/html">
         .title-link:hover {
             color: #74c69d;
         }
@@ -42,6 +42,9 @@
             {
                 <p style="color: green">Import success</p>
             }
+
+            <br/>
+            <a href="/tours/import/sample">Download Sample</a>
 
         </div>
         <hr/>
