--- a/Application/Pages/Manager/TourDetails.cshtml
+++ b/Application/Pages/Manager/TourDetails.cshtml
@@ -43,6 +43,10 @@
                class="form-control" id="tourImport" style="margin-right: 8px"/>
         <button class="btn btn-success" type="submit">Import</button>
     </form>
+
+    <br/>
+    <a href="/trips/import/sample">Download Sample</a>
+
 </div>
 
 <!-- Trips Table -->
