--- a/Application/Pages/Manager/TripDetails.cshtml
+++ b/Application/Pages/Manager/TripDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/manager/trips/{id}"
+﻿@page "/manager/trips/{tripId:guid}"
 @using Data.Enums
 @model Application.Pages.Manager.TripDetails
 
