fix manager auth

--- a/Application/Pages/Manager/Login.cshtml
+++ b/Application/Pages/Manager/Login.cshtml
@@ -4,12 +4,8 @@
     ViewData["Title"] = "Manager Login";
 }
 
-<div class="row g-0 d-flex align-items-center justify-content-center p-2" style="border: 1px solid #20c997">
-    <div class="col-lg-4 d-none d-lg-flex">
-        <img src="https://img.freepik.com/premium-photo/flat-lay-design-travel-concept-with-plane-yellow-background_661495-33430.jpg" alt="Trendy Pants and Shoes"
-             class="w-100"/>
-    </div>
-    <div class="col-lg-8 w-50">
+<div class="row g-0 d-flex align-items-center justify-content-center" >
+    <div class="col-lg-8 w-50" style="background-color: #A8DF8E; margin-left: 20px">
         <div class="card-body py-5 px-md-5">
             <h2 class="mb-5">Manager Login</h2>
 
@@ -30,6 +26,11 @@
                 <button type="submit" class="btn btn-primary btn-block mb-4">Login</button>
 
             </form>
+
+            @if (Model.ErrorMessage is not null)
+            {
+                <b style="color: red">@Model.ErrorMessage</b>
+            }
 
         </div>
     </div>
