--- a/Application/Pages/Shared/_Layout.cshtml
+++ b/Application/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using Newtonsoft.Json
+@using Application.Pages.Manager
+@using Microsoft.AspNetCore.Http;
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
@@ -8,23 +12,52 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     @* <link rel="stylesheet" href="~/RazorDemo.styles.css" asp-append-version="true"/> *@
+
+    <style>
+        .user-profile {
+            position: relative;
+        }
+    
+        #logout-button {
+            position: absolute;
+            top: 120%; /* Position it below the user icon button */
+            right: 0;
+        }
+    </style>
+
 </head>
 <body>
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-        <div class="container">
+        <div class="container flex-row">
             <a class="navbar-brand" asp-area="" asp-page="/manager/tours">Travel Manager</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            @* <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between"> *@
-            @*     <ul class="navbar-nav flex-grow-1"> *@
-            @*         <li class="nav-item"> *@
-            @*             <a class="nav-link text-dark" asp-area="" asp-page="/manager/tours">Home</a> *@
-            @*         </li> *@
-            @*     </ul> *@
-            @* </div> *@
+
+            @{
+                var userSessionData = Context.Session.GetString("User");
+                var currentUser = userSessionData is null
+                    ? null
+                    : JsonConvert.DeserializeObject<UserSessionModel>(userSessionData);
+            }
+
+            @if (currentUser != null)
+            {
+                <div class="user-profile">
+                    <button type="button" class="btn btn-primary" id="user-icon">
+                        <i class="bi bi-person"></i>
+                        <span>@currentUser.FirstName @currentUser.LastName</span>
+                    </button>
+                    <div class="d-none" id="logout-button">
+                        <a href="@Url.Page("Index", "Logout")">
+                            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#logout-modal">Logout</button>
+                        </a>
+                    </div>
+                </div>
+            }
+
         </div>
     </nav>
 </header>
@@ -43,6 +76,22 @@
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
+<script>
+    const userIcon = document.getElementById('user-icon');
+    const logoutButton = document.getElementById('logout-button');
+
+    userIcon.addEventListener('click', (event) => {
+        event.stopPropagation(); // Prevent the click from reaching the document
+        logoutButton.classList.toggle('d-none');
+    });
+
+    // Add a click event listener to the document to close the logout button container
+    document.addEventListener('click', (event) => {
+        if (!logoutButton.contains(event.target) && !userIcon.contains(event.target)) {
+            logoutButton.classList.add('d-none');
+        }
+    });
+</script>
 
 @await RenderSectionAsync("Scripts", required: false)
 </body>
