--- a/Application/Pages/Shared/_Layout.cshtml
+++ b/Application/Pages/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Newtonsoft.Json
-@using Application.Pages.Manager
 @using Microsoft.AspNetCore.Http;
+@using Application.Commons
 
 <!DOCTYPE html>
 <html lang="en">
@@ -91,6 +91,12 @@
             logoutButton.classList.add('d-none');
         }
     });
+</script>
+
+<script>
+    if (window.history.replaceState) {
+        window.history.replaceState(null, null, window.location.href);
+    }
 </script>
 
 @await RenderSectionAsync("Scripts", required: false)
