--- a/Application/Pages/Manager/TourDetails.cshtml
+++ b/Application/Pages/Manager/TourDetails.cshtml
@@ -89,6 +89,11 @@
                                 <i class="bi bi-eye-fill"> Details</i>
                             </a>
                         </td>
+                        <td>
+                            <button onclick="deleteTrip('@trip.Id', '@trip.Code', '@DateOnly.FromDateTime(trip.StartTime)', '@DateOnly.FromDateTime(trip.EndTime)')" type="button" class="btn btn-outline-danger">
+                                <i class="bi bi-trash"></i>
+                            </button>
+                        </td>
                     </tr>
                 }
 
@@ -96,29 +101,6 @@
             </table>
         </div>
     </div>
-
-    <!-- Pagination -->
-    @* <div class="row"> *@
-    @*     <div class="col-md-12"> *@
-    @*         <ul class="pagination justify-content-center"> *@
-    @*             <li class="page-item disabled"> *@
-    @*                 <a class="page-link" href="#" tabindex="-1">Previous</a> *@
-    @*             </li> *@
-    @*             <li class="page-item active"> *@
-    @*                 <a class="page-link" href="#">1</a> *@
-    @*             </li> *@
-    @*             <li class="page-item"> *@
-    @*                 <a class="page-link" href="#">2</a> *@
-    @*             </li> *@
-    @*             <li class="page-item"> *@
-    @*                 <a class="page-link" href="#">3</a> *@
-    @*             </li> *@
-    @*             <li class="page-item"> *@
-    @*                 <a class="page-link" href="#">Next</a> *@
-    @*             </li> *@
-    @*         </ul> *@
-    @*     </div> *@
-    @* </div> *@
 </div>
 
 <hr/>
@@ -202,3 +184,23 @@
     </div>
 
 </div>
+
+<script>
+    function deleteTrip(id, code, startDate, endDate) {
+        console.log(id);
+        Swal.fire({
+            title: `Delete Trip ${code}?`,
+            text: `${startDate} - ${endDate}`,
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#d33',
+            cancelButtonColor: '#3085d6',
+            confirmButtonText: 'Yes, delete it!'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                let baseURL = window.location.origin;
+                window.location.href = baseURL + `/manager/trips/${id}?handler=deleteTrip`;
+            }
+        })
+    }
+</script>
