--- a/Application/Pages/Shared/_Layout.cshtml
+++ b/Application/Pages/Shared/_Layout.cshtml
@@ -73,7 +73,8 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2023 - Travel Manager - <a asp-area="" asp-page="/Privacy">Privacy</a>
+        &copy; 2023 - Travel Manager
+        @* <a asp-area="" asp-page="/Privacy">Privacy</a> *@
     </div>
 </footer>
 
