--- a/Application/Pages/Manager/TourDetails.cshtml
+++ b/Application/Pages/Manager/TourDetails.cshtml
@@ -1,5 +1,8 @@
 ﻿@page "/manager/tours/{tourId:guid}"
 @model Application.Pages.Manager.TourDetails
+@{
+    ViewData["Title"] = "Tour Details";
+}
 
 <style>
         .img-container {
