--- a/Application/Pages/Manager/TripDetails.cshtml
+++ b/Application/Pages/Manager/TripDetails.cshtml
@@ -1,6 +1,9 @@
 ﻿@page "/manager/trips/{tripId:guid}"
 @using Data.Enums
 @model Application.Pages.Manager.TripDetails
+@{
+    ViewData["Title"] = "Trip Details";
+}
 
 @* <style> *@
 @*     thead th { width: 100px; border-bottom: solid 1px #ddd; font-weight: bold; } *@
