--- a/Application/Pages/Manager/Index.cshtml
+++ b/Application/Pages/Manager/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model Application.Pages.Manager.IndexModel
 @{
-    ViewData["Title"] = "Index page";
+    ViewData["Title"] = "Index";
 }
 
 <div class="text-center">
