--- a/Application/Pages/Manager/TripDetails.cshtml
+++ b/Application/Pages/Manager/TripDetails.cshtml
@@ -112,17 +112,11 @@
                                 Group @group.GroupNo:
                                 @switch (group.Status)
                                 {
-                                    case TourGroupStatus.Prepare:
+                                    case TourGroupStatus.Active:
                                         <span class="text-primary">@group.Status.ToString().ToUpper()</span>
-                                        break;
-                                    case TourGroupStatus.Ongoing:
-                                        <span class="text-success">@group.Status.ToString().ToUpper()</span>
                                         break;
                                     case TourGroupStatus.Ended:
                                         <span class="text-dark">@group.Status.ToString().ToUpper()</span>
-                                        break;
-                                    case TourGroupStatus.Canceled:
-                                        <span class="text-secondary">@group.Status.ToString().ToUpper()</span>
                                         break;
                                     default:
                                         throw new ArgumentOutOfRangeException();
