--- a/Application/Workers/Notification/Templates/attendance.html
+++ b/Application/Workers/Notification/Templates/attendance.html
@@ -1,9 +1,5 @@
 ﻿<div style="text-align: left; font-size: 16px; color: #202625;">
-    Attendance for
-    <strong>
-        @Model.Name
-    </strong>
-    has been
+    A new Attendance activity has been
     <span style="color: #00C738; font-weight: normal;">
         opened
     </span>.
